= 1.2.0 - May 29, 2019 = * WordPress 5.2 Update - check for WP_Error object and handle accordingly * Test on WooCommerce 3.6 * Fix overflow scroll for smaller iPhones

--- a/assets/css/paygate_checkout-03-19.css
+++ b/assets/css/paygate_checkout-03-19.css
@@ -10,6 +10,8 @@
     width: 100%;
     height: 100%;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
     background-color: rgb(0, 0, 0);
     /* Fallback background color */
     background-color: rgba(0, 0, 0, 0.6);
@@ -31,6 +33,8 @@
     height: 90%;
     /* Popup height: */
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
 }
 #payPopupFrame {
     margin: 0px;
